# COSC363-Computer-Graphics

./: .gitignore  README.md  build_command  ignore_these_files
Lab_1_Open_GL_Basics/: CMakeLists.txt  Model3D  Model3D.cpp  Octahedron.off  Sphere.off  Teapot  Teapot.cpp
Lab_2_Transformations/: CMakeLists.txt  Cannon  Cannon.cpp  Humanoid  Humanoid.cpp
Lab_3_Object_Modelling/: CMakeLists.txt  MapleLeaf  MapleLeaf.cpp  Vase
Lab_4_Texture_Mapping/: Vase.cpp
Lab_4_Texture_Mapping/III_MapleLeaf/: MapleLeaf  MapleLeaf.cpp
Lab_4_Texture_Mapping/II_Yard/: Yard  Yard.cpp
Lab_4_Texture_Mapping/I_RailWagon/: RailWagon  RailWagon.cpp
Lab_4_Texture_Mapping/SkyboxTextures/skybox1/: Thumbs.db
Lab_4_Texture_Mapping/SkyboxTextures/skybox2/: Thumbs.db  tropday_front.tga
Lab_4_Texture_Mapping/SkyboxTextures/skybox3/: Thumbs.db
Lab_4_Texture_Mapping/SkyboxTextures/skybox4/: Thumbs.db
Lab_4_Texture_Mapping/SkyboxTextures/skybox6/: Thumbs.db
Lab_6_Vector_Math/: CMakeCache.txt  CMakeLists.txt  FlightPath.out  GLM.out  Makefile  Model3Dvn.out  cmake_install.cmake
Lab_6_Vector_Math/III_GLM/: GLM_Examples.cpp
Lab_6_Vector_Math/II_Model3Dvn/: Model3Dvn  Model3Dvn.cpp
Lab_6_Vector_Math/I_FlightPath/: FlightPath  FlightPath.cpp  FlightPath.txt
Lab_7_Ray_Tracing_1/Lab07_Files/: CMakeCache.txt  CMakeLists.txt  Makefile  RayTracer.cpp  RayTracer.out  cmake_install.cmake
Lab_8_Ray_Tracing_2/Lab08_Files/: CMakeCache.txt  CMakeLists.txt  Makefile  Plane.cpp  RayTracer.cpp  RayTracer.out  SceneObject.cpp  Sphere.cpp  Sphere.h  cmake_install.cmake
Lab_9_OpenGL_4_Basics/Lab09_Files/: CMakeCache.txt  CMakeLists.txt  Makefile  Seashell.cpp  Seashell.frag  Seashell.out  Seashell.vert  cmake_install.cmake
akp41_363_assignment_1/: CMakeLists.txt  akp41_assignment_1  akp41_assignment_1.cpp  blue_sphere.tga  field.tga
